--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,39 @@
+html, body {
+  height: 100%; }
+
 .navbar {
-  background-color: #B7D8D6; }
+  background-color: #CE8054; }
+  .navbar h2 {
+    font-family: "Prata", serif;
+    font-weight: bold;
+    color: #233342; }
+
+.header-home {
+  color: #233342;
+  padding-top: 200px;
+  background-image: url("../img/antarticamelting.jpg");
+  height: inherit;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover; }
+  .header-home h1 {
+    background-color: white;
+    font-size: 60px; }
+  .header-home h2 {
+    background-color: white;
+    font-size: 30px; }
+
+body {
+  background-color: #EEF3DB;
+  font-family: "Lato", sans-serif; }
+
+h1 {
+  font-family: "Prata", serif; }
+
+h2 {
+  font-family: "Lato", sans-serif;
+  font-weight: 700px; }
+
+.btn-header {
+  background-color: #B35340;
+  color: #EEF3DB; }
