--- a/css/styles.css
+++ b/css/styles.css
@@ -1,96 +1,92 @@
 html, body {
   height: 100%; }
+  html .app-background, body .app-background {
+    background-color: #495A3A; }
 
 .navbar {
-  background-color: #2d300c; }
+  background-color: white; }
   .navbar h2 {
-    font-family: "Prata", serif;
+    font-family: "Montserrat";
     font-weight: bold;
-    color: #EEF3DB; }
-  .navbar .nav-item {
-    color: #EEF3DB; }
+    color: #091518; }
+  .navbar .nav-item .active {
+    font-weight: 15px;
+    border-radius: 4px;
+    color: white; }
 
-.navbar-light .navbar-nav .nav-link {
-  color: #EEF3DB; }
-  .navbar-light .navbar-nav .nav-link .active {
-    color: #EEF3DB; }
+.navbar-app {
+  background-color: #495A3A; }
+  .navbar-app h2 {
+    font-family: "Montserrat";
+    font-weight: bold;
+    color: white; }
+  .navbar-app .nav-item .active {
+    font-weight: 15px;
+    border-radius: 4px;
+    color: white; }
 
 .header-home {
-  color: #233342;
-  padding-top: 200px;
-  background-image: url("../img/antarticamelting.jpg");
-  height: inherit;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover; }
+  color: #091518;
+  height: 200px; }
   .header-home h1 {
-    font-size: 60px; }
+    font-size: 60px;
+    color: #091518; }
   .header-home h2 {
-    font-size: 30px;
-    padding-bottom: 30px; }
-  .header-home .card {
-    padding-top: 30px;
-    padding-bottom: 20px; }
+    font-size: 23px;
+    padding-bottom: 20px;
+    color: #6F3637; }
 
 body {
-  background-color: #EEF3DB;
-  font-family: "Lato", sans-serif; }
+  background-color: #091518;
+  font-family: "Montserrat"; }
 
 h1 {
-  font-family: "Prata", serif; }
+  font-family: "Montserrat"; }
 
 h2 {
-  font-family: "Lato", sans-serif;
-  font-weight: 700px; }
-
-.btn-header {
-  background-color: #B35340;
-  color: #EEF3DB; }
+  font-family: "Montserrat"; }
 
 .learn-content {
   padding-top: 80px;
   padding-bottom: 80px; }
-  .learn-content .learn-card {
-    border-radius: 10px;
-    overflow: hidden; }
   .learn-content h3 {
-    padding-bottom: 20px; }
+    padding-bottom: 20px;
+    color: whitesmoke; }
   .learn-content p {
     padding-bottom: 20px; }
   .learn-content h1 {
-    background-color: #B35340;
-    padding: 7px;
-    border-radius: 3px;
-    color: #EEF3DB; }
-  .learn-content .card .card-img-top {
-    border-radius: 0px; }
-  .learn-content .card .card-body {
-    background-color: #233342;
-    color: white; }
-  .learn-content .card p {
-    color: #EEF3DB;
-    padding: 0; }
-  .learn-content .card h1, .learn-content .card h2, .learn-content .card h3, .learn-content .card h4, .learn-content .card h5, .learn-content .card h6 {
-    color: #EEF3DB;
-    font-weight: bold;
-    background-color: #6F3637;
-    padding: 5px;
-    text-align: center;
-    border-radius: 10px; }
+    background-color: whitesmoke;
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    color: #091518; }
 
-.mid-parallax {
-  color: #233342;
-  padding-top: 200px;
-  background-image: url("../img/omaha_oli.jpg");
-  height: 1000px;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
+.site-footer {
+  background-color: black;
+  color: whitesmoke; }
+
+.carousel-item {
+  height: 100vh;
+  min-height: 350px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover; }
-  .mid-parallax h1 {
-    font-size: 60px; }
-  .mid-parallax h2 {
-    font-size: 30px;
-    padding-bottom: 30px; }
-  .mid-parallax .card {
-    padding-top: 30px;
-    padding-bottom: 20px; }
+
+.carousel-caption {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%); }
+
+@media screen and (max-width: 768px) {
+  .carousel-caption {
+    bottom: 20px !important; }
+  .carousel-caption h2 {
+    font-size: 60px !important; } }
+
+.card-full {
+  min-height: 350px;
+  height: 100vh;
+  padding-top: 200px; }
